# Sim-Cell-Aut_Gpu

./: Cargo.toml  README.md  build.ps1  remove_comments.rs  server.py
.VSCodeCounter/2026-03-09_02-20-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
automat_files_for_testing/life/b2s/: breeder-p18.lif  breeder-p24.lif  c1p001.lif  c1p002.lif  c1p003.lif  c1p004.lif  c1p005.lif  c1p006.lif  c1p008.lif  c1p009.lif  c1p012.lif  c1p016.lif  c1p018.lif  c1p024.lif  c1p030.lif  c1p032.lif  c1p036.lif  c1p040.lif  c1p045.lif  c1p048.lif  c1p060.lif  c1p120.lif  c2p002.lif  c2p004.lif  c4d.lif  c5.lif  conversions.lif  eaters.lif  guns.lif  ocs-p002.lif  osc-p003.lif  osc-p004.lif  osc-p006.lif  period-double.lif  rake-p24p4b.lif  rake-p24p4s.lif  rakepuff-p24.lif  readme.txt  tether.lif  triangle1.lif  (+3 more)
gpu-automata/: Cargo.toml  README.md
gpu-automata/src/: lib.rs
gpu-automata/src/automata/: buffers.rs  engine.rs  mod.rs  pipeline.rs
gpu-automata/src/cell/: field.rs  mod.rs  schema.rs
gpu-automata/src/render/: mod.rs  renderer.rs
gpu-automata/src/rule_graph/: compiler.rs  graph.rs  mod.rs  node.rs  wgsl.rs
gpu-automata/src/shader/: builder.rs  mod.rs  templates.rs
gpu-automata/src/sparse/: active_set.rs  mod.rs
gpu-automata/src/topology/: grid2d.rs  grid3d.rs  hex.rs  mod.rs
lif-viewer/: Cargo.toml
lif-viewer/src/: app.rs  lif_parser.rs  main.rs  sidebar.rs
src/: app.rs  main.rs  state.rs  triangle_shader.wgsl
web-interface/: main.html
