[package]
name    = "gpu-automata"
version = "0.1.0"
edition = "2021"
description = "High-performance GPU cellular automata engine (wgpu 22 / WGSL)"

[lib]
name = "gpu_automata"
path = "src/lib.rs"

[dependencies]
wgpu     = { workspace = true }
bytemuck = { workspace = true }
log      = { workspace = true }
anyhow   = { workspace = true }

[dev-dependencies]
winit      = { workspace = true }
pollster   = { workspace = true }
env_logger = { workspace = true }
