[package]
name    = "lif-viewer"
version = "0.1.0"
edition = "2021"
description = "Game of Life viewer with .lif / .cells / .rle file support"

[[bin]]
name = "lif-viewer"
path = "src/main.rs"

[dependencies]
# ── Our simulation library ────────────────────────────────────────────────────
gpu-automata = { path = "../gpu-automata" }

# ── GPU + windowing ───────────────────────────────────────────────────────────
wgpu   = { workspace = true }
winit  = { workspace = true }

# ── UI (sidebar) ─────────────────────────────────────────────────────────────
# egui 0.29 supports winit 0.30 and wgpu 22+.
# egui-wgpu renders egui geometry into a wgpu render pass.
# egui-winit translates winit events into egui input.
egui        = "0.29"
egui-wgpu   = "0.29"
egui-winit  = "0.29"

# ── Native file-open dialog ───────────────────────────────────────────────────
rfd = "0.14"

# ── Utilities ─────────────────────────────────────────────────────────────────
bytemuck   = { workspace = true }
pollster   = { workspace = true }
log        = { workspace = true }
env_logger = { workspace = true }
anyhow     = { workspace = true }
